--- a/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/layout/activity_user_area.xml
+++ b/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/layout/activity_user_area.xml
@@ -29,5 +29,23 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name" />
+    <TextView
+        android:id="@+id/tvAge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/age"
+        android:layout_below="@+id/etUserName"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        />
+    <EditText
+        android:id="@+id/etAge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tvAge" />
+
 
 </LinearLayout>
