Agregados cambios de luis (Ver proyectos, detalle, agregar) y area de ImageUpload todavia no funcional de Jared

--- a/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/layout/activity_projects_view.xml
+++ b/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/layout/activity_projects_view.xml
@@ -1,18 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="latitude_pc.app.prueba1.com.prueba1.ProjectsView"
-    android:orientation="vertical"
-    android:weightSum="1"
-    android:padding="20dp">
-    <ListView
-        android:id="@+id/Project_List"
+    android:layout_height="match_parent">
+
+    <!-- The first child in the layout is for the main Activity UI-->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="#CCCCCC"
-        android:dividerHeight="1dp"
-        android:paddingLeft="2dp" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:paddingBottom="0dp">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/servicesRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+        <!--<android.support.design.widget.FloatingActionButton
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:padding="10dp"
+             android:src="@drawable/turn_off"
+             android:onClick="logout"
+             android:layout_marginLeft="10dp"
+             android:layout_marginRight="10dp"
+             android:layout_alignTop="@+id/floatingActionButton"
+             android:layout_alignParentStart="true" />-->
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="10dp"
+            android:padding="10dp"
+            android:src="@drawable/icon_plus_big"
+            android:onClick="newService"
+            android:id="@+id/floatingActionButton" />
+
+    </RelativeLayout>
+
+    <!-- Side navigation drawer UI -->
+    <ListView
+        android:id="@+id/navList"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:background="#ffeeeeee"/>
+
+</android.support.v4.widget.DrawerLayout>
