--- a/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/layout/activity_project_detail.xml
+++ b/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/layout/activity_project_detail.xml
@@ -8,14 +8,13 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="192dp">
-
         <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/Collapsable"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:collapsedTitleTextAppearance="@color/colorAccent"
-            android:id="@+id/Collapsable">
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -40,146 +39,160 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:background="@drawable/header"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="189dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20px"
                     android:text="Descripción"
-                    android:textSize="25dp"
                     android:textColor="@color/colorAccent"
-                    ></TextView>
-
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="20px"
-                    android:text="Descargar" />
+                    android:textSize="25dp"></TextView>
             </LinearLayout>
+
             <LinearLayout
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:background="@drawable/drawable">
-                <TextView
+                android:layout_height="wrap_content"
+                android:background="@drawable/body"
+                android:orientation="vertical">
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/txtAutor"
-                    android:text="Autor"
-                    android:textSize="20dp"
-                    android:textColor="@color/colorPrimaryDark"/>
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtAutor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="80"
+                        android:text="Autor"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="20dp" />
+
+                    <Button
+                        android:id="@+id/button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
+                        android:layout_weight="20"
+                        android:text="Descargar" />
+                </LinearLayout>
+
                 <TextView
+                    android:id="@+id/Desc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="20px"
                     android:text="Toda la descripcion del proyecto que se esta o se realizo aparecera aqui"
-                    android:textSize="18dp"
-                    android:id="@+id/Desc">
-                </TextView>
+                    android:textSize="18dp"></TextView>
             </LinearLayout>
 
-            <TextView
-                android:layout_width="189dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20px"
-                android:text="Comentarios"
-                android:textSize="25dp"
-                android:textColor="@color/colorAccent"
-                ></TextView>
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <QuickContactBadge
-                    android:id="@+id/quickContactBadge"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="20px"
-                    android:layout_width="wrap_content"
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@mipmap/ic_launcher_round" />
-                <RelativeLayout
-                    android:layout_width="wrap_content"
+                    android:background="@drawable/header">
+
+                    <TextView
+                        android:layout_width="189dp"
+                        android:layout_height="wrap_content"
+                        android:text="Imagenes"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="25dp" />
+                </LinearLayout>
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/vpImages"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="@drawable/body"
+                    android:theme="@style/Oscuro">
+
+                    <android.support.v4.view.PagerTabStrip
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"
+                        android:theme="@style/Oscuro" />
+                </android.support.v4.view.ViewPager>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/quickContactBadge">
+                    android:background="@drawable/header">
+
+                    <TextView
+                        android:layout_width="189dp"
+                        android:layout_height="wrap_content"
+                        android:text="Comentarios"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="25dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:id="@+id/NombreCom1"
+                        android:background="@drawable/subheader"
+                        android:padding="10dp"
                         android:text="Nombre del usuario"
-                        android:padding="5dp"
-                        android:textSize="18dp">
-                    </TextView>
+                        android:textColor="#FFFF"
+                        android:textSize="18dp"></TextView>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
+                        android:background="@drawable/body"
                         android:text="Esta chido"
-                        android:textSize="18dp"
-                        android:background="@drawable/drawable"
-                        android:layout_below="@+id/NombreCom1">
-                    </TextView>
-                </RelativeLayout>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <QuickContactBadge
-                    android:id="@+id/quickContactBadge2"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="20px"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@mipmap/ic_launcher" />
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/quickContactBadge2">
+                        android:textSize="18dp"></TextView>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:id="@+id/NombreCom2"
+                        android:background="@drawable/subheader"
+                        android:padding="10dp"
                         android:text="Nombre del usuario"
-                        android:padding="5dp"
-                        android:textSize="18dp">
-                    </TextView>
+                        android:textColor="#FFFF"
+                        android:textSize="18dp"></TextView>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:text="Muy util"
-                        android:textSize="18dp"
-                        android:background="@drawable/drawable"
-                        android:layout_below="@+id/NombreCom2">
-                    </TextView>
-                </RelativeLayout>
-            </RelativeLayout>
+                        android:background="@drawable/body"
+                        android:text="Esta chido"
+                        android:textSize="18dp"></TextView>
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
-
 </android.support.design.widget.CoordinatorLayout>
