--- a/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/values/styles.xml
+++ b/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/values/styles.xml
@@ -9,7 +9,12 @@
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
+    <style name="Oscuro">
+        <item name="android:textColor">#000</item>
+    </style>
+    <style name="Light">
+        <item name="android:textColor">#FFFF</item>
+    </style>
     <style name="TextAppearence.TextInputLayout.FloatLabel" parent="@android:style/TextAppearance">
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textSize">15dp</item>
