--- a/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/layout/activity_login.xml
+++ b/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/layout/activity_login.xml
@@ -14,23 +14,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/logo" />
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@color/colorAccent"
+        android:layout_marginTop="10dp"
+        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.FloatLabel">
 
-    <EditText
-        android:id="@+id/etUserName"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/etUserName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/user_name"
+            android:inputType="textPersonName"
+            android:textColor="#000"
+            android:textSize="15dp" />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/user_name"
-        android:inputType="textPersonName" />
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/password"
-        android:inputType="textPassword" />
+        android:theme="@color/colorAccent"
+        android:layout_marginTop="10dp"
+        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.FloatLabel">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/password"
+            android:textSize="15dp"
+            android:inputType="textPassword"
+            android:textColor="#000" />
+    </android.support.design.widget.TextInputLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight=".4"
         android:gravity="center"
         android:padding="20dp">
 
@@ -41,7 +59,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="@color/colorPrimary"
-            android:text="@string/login"
+            android:text="Entrar"
             android:textColor="#ffffff" />
     </RelativeLayout>
 
@@ -51,6 +69,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/register"
-        android:textSize="18sp" />
+        android:textSize="15dp" />
 
 </LinearLayout>
