--- a/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/layout/activity_register.xml
+++ b/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/layout/activity_register.xml
@@ -8,48 +8,82 @@
     android:orientation="vertical"
     android:weightSum="1"
     android:padding="20dp">
-        <EditText
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@color/colorAccent"
+        android:layout_marginTop="35dp"
+        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.FloatLabel">
+
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/etName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/name"
-            android:inputType="textPersonName" />
-        <EditText
+            android:textSize="15dp"
+            android:inputType="textPersonName"
+            android:textColor="#000" />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@color/colorAccent"
+        android:layout_marginTop="10dp"
+        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.FloatLabel">
+
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/etUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/user_name"
-            android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/etAge"
+            android:textSize="15dp"
+            android:inputType="textPersonName"
+            android:textColor="#000" />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Edad"
-        android:inputType="number" />
+        android:theme="@color/colorAccent"
+        android:layout_marginTop="10dp"
+        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.FloatLabel">
 
-    <EditText
-        android:id="@+id/etPassword"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/etAge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/age"
+            android:textSize="15dp"
+            android:inputType="number"
+            android:textColor="#000" />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/password"
-        android:inputType="textPassword" />
+        android:theme="@color/colorAccent"
+        android:layout_marginTop="10dp"
+        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.FloatLabel">
 
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/password"
+            android:textSize="15dp"
+            android:inputType="textPassword"
+            android:textColor="#000" />
+    </android.support.design.widget.TextInputLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight=".4"
         android:gravity="center"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:layout_marginTop="40dp">
 
         <Button
             android:id="@+id/btnRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="@color/colorPrimary"
             android:text="@string/register"
